// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`withFormItem > passes all props correctly to Form.Item and wrapped Input component (with error) 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-with-help ant-form-item-has-feedback ant-form-item-has-error ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
      >
        <label
          class=""
          title=""
        >
          <span
            aria-describedby="test-id"
          >
            Test Label
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input />
            <span
              class="pl2"
            >
              Test Suffix
            </span>
          </div>
        </div>
        <div
          class="ant-form-item-additional"
          style="min-height: 24px;"
        >
          <div
            class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-form-item-explain-error"
            >
              <span
                data-test-id="test-error"
              >
                Error
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item-margin-offset"
      style="margin-bottom: -24px;"
    />
  </div>
</DocumentFragment>
`;

exports[`withFormItem > passes all props correctly to Form.Item and wrapped Input component (without error) 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
      >
        <label
          class=""
          title=""
        >
          <span
            aria-describedby="test-id"
          >
            Test Label
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input />
            <span
              class="pl2"
            >
              Test Suffix
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`withFormItem > passes props correctly to Form.Item and wrapped Input component (without error and custom layout) 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-3 ant-col-offset-2 ant-form-item-label css-dev-only-do-not-override-mncuj7"
      >
        <label
          class=""
          title=""
        >
          <span
            aria-describedby="test-id"
          >
            Test Label
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-col-10 ant-form-item-control css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`withFormItem > passes props correctly to Form.Item and wrapped Input component (without error and only child) 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item mb2-important css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
